[project]
name = "helios-med"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.9.6",
    "chromadb>=1.5.2",
    "fastembed>=0.7.4",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.10",
    "ollama>=0.6.1",
    "openai>=2.24.0",
    "pypdf>=6.7.5",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.2.3",
    "tiktoken>=0.12.0",
]
